@@ -1,5 +1,6 @@
 (fn hash-table? (x)
-  (is_a x "__array"))
+  (| (is_a x "__array")
+     (%%native "array_keys (" x ") === range (0, count (" x ") - 1)")))
 
 (fn %%key (x)
   (?
